Minor spacing fix

--- a/src/less/website/base.less
+++ b/src/less/website/base.less
@@ -491,3 +491,6 @@ transition: all 0.3s;
 .mm-method-code .api-method-example{
   margin-top: 15px;
 }
+.api-method-definition h3 {
+    margin-top: 0px;
+}
